--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="theme.css">
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="theme.css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
 
 
@@ -29,31 +29,32 @@
 
     <form id="game-form">
       <label for="game-input">Type the Game Title </label>
-      <input type="text" id="game-input"><br>
-    <!-- ----------------------------------------- -->
+      <input type="text" id="game-input">
+      <br>
+      <!-- ----------------------------------------- -->
 
       <!-- Button triggers new game to be added (DONE) -->
       <input id="add-game" type="submit" value="Add a game">
     </form>
-     <!---- -------------------------------------------->
-      <!-- Place to display the Gifs (DONE) -->
+    <!---- -------------------------------------------->
+    <!-- Place to display the Gifs (DONE) -->
 
     <div id="gifs-appear-here">
-  </div>
+    </div>
 
-      <!-- Adds JQUERY (DONE) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+    <!-- Adds JQUERY (DONE) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Adds Javascript Coding (DONE) -->
     <script type="text/javascript">
-      
+
       // JAVASCRIPT / JQUERY STARTS
-      
+
       //Initial array of games (DONE)
       var games = ["Final Fantasy", "Dark Souls", "The Legend of Zelda", "Silent Hill"];
       ///////////////////////////////////////////////////////////////////////
       // Function for displaying game data (DONE)
       function renderButtons() {
-      ///////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////////////////////////
 
         // Deleting the game buttons prior to adding new game buttons (DONE)
         // (this is necessary otherwise we will have repeat buttons) (DONE)
@@ -63,7 +64,7 @@
 
         // Looping through the array of games (DONE)
         for (var i = 0; i < games.length; i++) {
-      /////////////////////////////////////////////////////////////////////
+          /////////////////////////////////////////////////////////////////////
 
           // Then dynamicaly generating buttons for each game in the array. 
           // This code $("<button>") is all jQuery needs to create the start and end tag. (<button></button>) (DONE)
@@ -86,7 +87,7 @@
       /////////////////FUNCTION BUTTON CLICKED////////////////////////////////////////
 
       // This function handles events where one button is clicked (DONE)
-      $("#add-game").on("click", function(event) {
+      $("#add-game").on("click", function (event) {
         /////////////////////////////////////////////////////////////
         // event.preventDefault() prevents the form from trying to submit itself. 
         // We're using a form so that the user can hit enter instead of clicking the button if they want
@@ -106,57 +107,61 @@
       renderButtons();
 
 
-//ADD GIPHY API TO EACH OF THE BUTTONS WHEN IS CLICKED
+      //ADD GIPHY API TO EACH OF THE BUTTONS WHEN IS CLICKED
 
 
- // Event listener for all button elements
- $(document).on("click", ".game", function () {
+      // Event listener for all button elements
+      $(document).on("click", ".game", function () {
 
-var gamu = $(this).attr("data-name");
-////////////////////////////////////////////////////////
-// Constructing a URL to search Giphy 
-var queryURL = "https://api.giphy.com/v1/gifs/search?q=" +
-  gamu + "&api_key=dc6zaTOxFJmzC&limit=10";
-/////////////////////////////////////////////////////////
-// Performing AJAX GET request
-$.ajax({
-  url: queryURL,
-  method: "GET"
-})
-// After the data comes back from the API
-  .then(function(response) {
-// Stores to the  array of results in the results variable
-    var results = response;
-    console.log(results);
+        var gamu = $(this).attr("data-name");
+        ////////////////////////////////////////////////////////
+        // Constructing a URL to search Giphy 
+        var queryURL = "https://api.giphy.com/v1/gifs/search?q=" +
+          gamu + "&api_key=dc6zaTOxFJmzC&limit=10";
+        /////////////////////////////////////////////////////////
+        // Performing AJAX GET request
+        $.ajax({
+          url: queryURL,
+          method: "GET"
+        })
+          // After the data comes back from the API
+          .then(function (response) {
+            // Stores to the  array of results in the results variable
+            var results = response;
+            console.log(results);
 
-	for (var i = 0; i<results.data.length; i++){
-  
+            for (var i = 0; i < results.data.length; i++) {
 
-  var gifDiv = $("<div class='item'>");
 
-//Creates an image tag
-  var gameImage = $("<img>");
+              var gifDiv = $("<div class='item'>");
 
-// Giving the image tag an src attribute of a proprty pulled off the
-// result item
-gameImage.attr("src", results.data[i].images.original.url);
+              //Creates an image tag
+              var gameImage = $("<img>");
 
-var state = gameImage.attr("data-state");
+              // Giving the image tag an src attribute of a proprty pulled off the
+              // result item
+              gameImage.attr("src", results.data[i].images.original.url);
+              gameImage.attr("data-state", "animate");
+              gameImage.attr("data-still", results.data[i].images.original_still.url);
+              gameImage.attr("data-animate", results.data[i].images.original.url);
 
-if (gameImage.attr("data-state") == "still") {
-	gameImage.attr('src', results.data[i].images.original_still.url);
-	gameImage.attr("data-state", "animate");
-} else {
-	gameImage.attr('src', results.data[i].images.original.url);
-	gameImage.attr("data-state", "still");
-}
-gifDiv.append(gameImage);
+              gifDiv.append(gameImage);
 
-// Prepending the gifDiv to the "#gifs-appear-here" div in the HTML
-$("#gifs-appear-here").prepend(gifDiv);
-}
-  });
-});
+              // Prepending the gifDiv to the "#gifs-appear-here" div in the HTML
+              $("#gifs-appear-here").prepend(gifDiv);
+            }
+          });
+          $(document).on("click", "img", function () {
+            console.log($(this).attr("data-state"));
+            if ($(this).attr("data-state") == "still") {
+	            $(this).attr('src', $(this).attr("data-animate"));
+	            $(this).attr("data-state", "animate");
+           } else {
+	           $(this).attr('src', $(this).attr("data-still"));
+	           $(this).attr("data-state", "still");
+             }
+          });
+      });
     </script>
   </div>
 </body>
